main.tf
resource "random_string" "autogenerated_password" {
  length  = 16
  special = false
}
# Create EC2 instances for the Elasticsearch cluster
resource "aws_instance" "master" {
  count         = var.master_count
  ami            = var.ami_id
  instance_type  = var.instance_type
  key_name       = "test"  # Update with your key pair name
  subnet_id      = "data.aws_subnets.database.ids"  # Update with your subnet ID
  security_groups = [aws_security_group.es_security_group.id]  # Reference security group by ID
  iam_instance_profile = aws_iam_instance_profile.multinodeES_instance_profile.name  # Update with your IAM role name

  user_data = templatefile("${path.module}/user_data_master.sh", {
    ELASTIC_USER        = var.elastic_user
    ELASTIC_PASSWORD    = random_string.autogenerated_password.result
    REGION              = var.aws_region
    INSTANCE_NAME_MASTER = var.instance_name_master
    INSTANCE_NAME_DATA  = var.instance_name_data
    INSTANCE_NAME_COMMON = var.instance_name_common
    BUCKET_NAME         = var.bucket_name
  })
  tags = {
    Name = var.instance_name_master
    Type = "Master"
  }
}

resource "aws_instance" "data" {
  count         = var.data_count
  ami            = var.ami_id
  instance_type  = var.instance_type
  key_name       = "test"  # Update with your key pair name
  subnet_id      = "data.aws_subnets.database.ids"  # Update with your subnet ID
  security_groups = [aws_security_group.es_security_group.id]  # Reference security group by ID
  iam_instance_profile = aws_iam_instance_profile.multinodeES_instance_profile.name  # Update with your IAM role name
  tags = {
    Name = var.instance_name_data
    Type = "Data"
  }
  user_data = templatefile("${path.module}/user_data_data.sh", {
    ELASTIC_USER        = var.elastic_user
    ELASTIC_PASSWORD    = random_string.autogenerated_password.result
    REGION              = var.aws_region
    INSTANCE_NAME_MASTER = var.instance_name_master
    INSTANCE_NAME_DATA  = var.instance_name_data
    INSTANCE_NAME_COMMON = var.instance_name_common
    BUCKET_NAME         = var.bucket_name
  })
}
